--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,45 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
+  align-self: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 50px;
+  background-color: #DA4167;
+  margin: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.list-items {
+  color: white
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container h2 {
+  color: white
+}
+
+.container p {
+  color: white
+}
+
+.my-button {
+   background-color: #4CAF50;
+   border: none;
+   color: white;
+   padding: 15px 32px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+}
+
+.color-state {
+  height: 50px;
+  width: 50px;
+  background: grey;
+}
+
+.color-state-changed {
+  height: 50px;
+  width: 50px;
+  background: yellow;
 }
